frontend/shared/scss/base/variables.scss
/* ... */
@mixin dark-modus {
  --color-background: #{$dark-theme-color-background};
  --color-background-shade: #{$dark-theme-color-background-shade};
  --color-background-shade-darker: #{$dark-theme-color-background-shade-darker};

  --color-dark: #{$dark-theme-color-dark};
  --color-dark-light: #{$dark-theme-color-dark-light};
  --color-gray-1: #{$dark-theme-color-gray-1};
  --color-gray-2: #{$dark-theme-color-gray-2};
  --color-gray-3: #{$dark-theme-color-gray-3};
  --color-gray-4: #{$dark-theme-color-gray-4};

  --color-background-highlight: #{$dark-theme-color-background-highlight};
  --color-background-interactive: #{$dark-theme-color-background-interactive};

  --color-error-dark: #{$dark-theme-color-error-dark};
  --color-error-background: #{$dark-theme-color-error-background};
  --color-error-border: #{$dark-theme-color-error-border};

  --color-success-dark: #{$dark-theme-color-success-dark};
  --color-success-background: #{$dark-theme-color-success-background};
  --color-success-border: #{$dark-theme-color-success-border};

  --color-warning-dark: #{$dark-theme-color-warning-dark};
  --color-warning-background: #{$dark-theme-color-warning-background};
  --color-warning-border: #{$dark-theme-color-warning-border};

  --color-secundary-dark: #{$dark-theme-color-secundary-dark};
  --color-secundary-background: #{$dark-theme-color-secundary-background};
  --color-secundary-border: #{$dark-theme-color-secundary-border};

  --color-tertiary-dark: #{$dark-theme-color-tertiary-dark};
  --color-tertiary-background: #{$dark-theme-color-tertiary-background};
  --color-tertiary-border: #{$dark-theme-color-tertiary-border};

  --color-payconiq-dark: #{$dark-theme-color-payconiq-dark};
  --color-payconiq-background: #{$dark-theme-color-payconiq-background};
  --color-payconiq-border: #{$dark-theme-color-payconiq-border};

  --color-primary-lighter: #{$dark-theme-color-primary-lighter};
  --color-primary-light: #{$dark-theme-color-primary-light};
  --color-primary-background: #{$dark-theme-color-primary-background};
  --color-primary-dark: #{$dark-theme-color-primary-dark};
  --color-primary-gray-light: #{$dark-theme-color-primary-gray-light};

  --color-primary: #{$dark-theme-color-primary};
  --color-primary-contrast: #{$dark-theme-color-primary-contrast};

  --color-border-shade: #{$dark-theme-color-border-shade};

  // Manual
  --color-shadow: rgba(255, 255, 255, 0.05);
  --color-box-shadow: rgba(0, 0, 0, 0.5);

  .sheet,
  .popup {
    &:after {
      background: $color-background-shade-darker;
      opacity: 0.5;
    }

    &.fade-enter,
    &.fade-leave-to {
      &:after {
        opacity: 0;
      }
    }

    >div {
      box-shadow: 0 0 0 1px $color-border, 0px 10px 60px 0px $color-overlay-shadow, 0px 15px 30px 0px $color-overlay-shadow;
    }
  }
}

